--- a/Front/project_Full/src/js/layout/header/Header.css
+++ b/Front/project_Full/src/js/layout/header/Header.css
@@ -1,6 +1,8 @@
 .header {
   display: flex;
   flex-direction: column;
+  justify-content: space-between; /* 양 끝으로 정렬 */
+  align-items: center;
 }
 
 .top-memu {
