--- a/Front/project_Full/src/js/layout/LayOut.css
+++ b/Front/project_Full/src/js/layout/LayOut.css
@@ -1,7 +1,5 @@
 .container {
-  display: flex;
-  flex-direction: column;
-
   /* 최소 높이를 화면의 전체 높이로 설정하여 footer를 페이지 아래에 고정 */
   min-height: 100vh;
+  width: 100vw;
 }
