--- a/Front/project_Full/src/js/layout/footer/Footer.css
+++ b/Front/project_Full/src/js/layout/footer/Footer.css
@@ -1,19 +1,4 @@
-.footer-container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 20px;
-  background-color: rgb(0, 162, 255); /* 파란색 배경 추가 */
-}
-
-.footer-links {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 10px;
-}
-
-.separator {
-  margin: 0 5px;
+.footer{
+  margin-top:200px;
+  height: 150px;
 }
