--- a/Front/project_Full/src/js/pages/board/boardDetail/BoardDetail.css
+++ b/Front/project_Full/src/js/pages/board/boardDetail/BoardDetail.css
@@ -6,6 +6,8 @@
   background-color: #ffffff7a;
 }
 
+/* ===== 제목, 작성자, 일자 ===== */
+
 .board-head {
   display: flex;
   justify-content: space-between;
@@ -17,22 +19,66 @@
   flex: 1;
 }
 
+/* 작성자 정보의 오른쪽 여백 조절 */
 .author-info {
-  margin-right: 20px; /* 작성자 정보의 오른쪽 여백 조절 */
+  margin-right: 20px;
 }
 
+/* 작성 일자 정보의 왼쪽 여백 조절 */
 .date-info {
-  margin-left: 20px; /* 작성 일자 정보의 왼쪽 여백 조절 */
+  margin-left: 20px;
 }
 
 .board-actions {
   margin-left: 20px;
 }
 
-.btn {
+.board-actions .btn {
   margin-left: 20px;
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+/* ===== 댓글 ===== */
+
+.board-comment {
+  align-items: center;
+}
+
+/* - 답글 대상 표시 및 취소 */
+.board-recoTarget {
+  display: flex;
+  align-items: center;
+}
+.cancle-recomment {
+  height: 50%;
+  margin-right: 10px;
+  margin-bottom: 5px;
+}
+
+.recoTarget {
+  flex: 1;
+}
+
+.board-recoTarget input {
+  width: 100px;
+}
+
+/* - 댓글 입력, 추가 */
+.board-newComment {
+  display: flex;
+  flex: 2;
+  align-items: center;
+}
+
+.addComment {
+  margin-right: 10px;
+  margin-bottom: 15px;
+}
+
+.addCommentArea {
+  resize: none;
+  width: 80%;
 }
