--- a/Front/project_Full/src/js/pages/Festivals/festivals/Festivals.css
+++ b/Front/project_Full/src/js/pages/Festivals/festivals/Festivals.css
@@ -1,1 +1,26 @@
+.festival-mu {
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid black;
+  background: lightgray;
+  padding: 15px;
+}
 
+.form-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-group label {
+  margin-bottom: 20px;
+}
+
+.form-group input,
+.form-group textarea {
+  margin-left: 10px;
+  font-size: 12px;
+  flex: 1;
+}
