--- a/Front/project_Full/src/js/pages/Travel/Reservationlist.css
+++ b/Front/project_Full/src/js/pages/Travel/Reservationlist.css
@@ -1,20 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Cute+Font&family=Nanum+Pen+Script&display=swap');
-
+/*예약 목록 스타일*/
 .reserve-list{
     margin-Left: 0%;
     margin-Right: 0%;
     margin-Bottom: 3%;
     margin-Top: 3%;
     background-Color: white;
-    border: 1px solid;
     text-Align: center;
 }
-
-.button-container{
-    font-family: 'Nanum Pen Script', cursive;
-    font-size: 20px;
-}
-
+/*헤더 제목 스타일*/
 .reserve-list-header{
     margin-top: 3%;
     text-align: center;
@@ -22,6 +16,13 @@
     font-size: 54px;
     color: #333;
 }
+/*결제버튼 스타일*/
+.pay-button{
+    font-family: 'Cute Font', sans-serif;
+    font-size: 24px;
+    margin-right: 40px;
+}
+
 
 /* 데이터 그리드의 컬럼헤더 숨기기 */
 .hideHeaders .MuiDataGrid-columnHeaders,
