--- a/Front/project_Full/src/js/pages/Travel/TravelPackList.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelPackList.css
@@ -1,26 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cute+Font&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cute+Font&family=Nanum+Pen+Script&display=swap');
 
-.button-container {
-    font-family: 'Nanum Pen Script', cursive;
-    font-size: 20px;
-}
 
-.column-header {
-    font-family: 'Cute Font', sans-serif;
-    font-size: 20px;
-}
-
-.traval-pack-list-container {
-    margin-left: 0%;
-    margin-right: 0%;
-    margin-bottom: 3%;
-    margin-top: 5%;
-    text-align: center;
-    background-color: white;
-    border: 1px solid;
-}
-
+/*헤더 제목 스타일*/
 .traval-pack-list-header {
     margin-top: 3%;
     margin-bottom: 3%;
@@ -30,6 +12,12 @@
     color: #333;
 }
 
+/*헤더 제목 아이콘*/
+.custom-luggage-icon {
+    font-size: large;
+    color: skyblue;
+}
+
 .MuiDataGrid-cell {
     font-family: 'Nanum Pen Script', cursive;
     font-size: 20px;
@@ -37,6 +25,7 @@
     align-items: center !important;
 }
 
+/*페이지네이션*/
 .stackContainer {
     display: flex;
     justify-content: center;
@@ -44,15 +33,13 @@
     /* margin-bottom: 0%; */
 }
 
+/*예약하기 버튼 폰트*/
 .button-font {
     font-family: 'Cute Font', sans-serif;
-    font-size: 27px;
+    font-size: 24px;
+    
 }
 
-.custom-luggage-icon {
-    font-size: large;
-    color: skyblue;
-}
 
 
 /* <div의 클래스 이름> */
@@ -66,12 +53,14 @@
     text-align: center;
     background-color: white;
     /* border: 1px solid; */
+    
 }
 
 /* <여행 정보> */
 .travelinformation {
     padding: 10px;
     text-align: left;
+    margin-left: 60px;
 }
 
 /* 이미지설정 */
@@ -90,40 +79,30 @@
     /* 셀에 대한 스타일 */
 }
 
+
 /* 데이터 그리드의 컬럼헤더 숨기기 */
 .hideHeaders .MuiDataGrid-columnHeaders,
 .hideHeaders .MuiDataGrid-columnHeader {
     display: none;
+    
 }
 
 .hideHeaders .MuiDataGrid-virtualScroller {
     margin-top: 0 !important;
+    background: linear-gradient(to right,  #2c4285, #415d9c, #8088B2, #C7B0C2);
+   
 }
 
 /* 참고: https://stackoverflow.com/questions/76463098/how-to-remove-column-header-of-mui-v5-datagrid-in-react-ts */
 /* ------------------------------------------ */
 
-/* <버튼 효과> */
-/* ---------------------------------- */
-/* 버튼 호버 전 */
-.button-hover {
-    background-color: skyblue;
-    color: white;
-    /* 부드러운 전환 효과를 위한 속성 */
-    transition: background-color 0.3s;
-}
 
-/* 버튼 호버 후 */
-.button-hover:hover {
-    background-color: deepskyblue;
-    color: black;
-}
-
-/* ---------------------------------- */
 
 /* 이미지 */
 .image-cell {
     /* text-align: center; */
+    border: 1px solid black;
+    margin-left: 10px;
 }
 
 /* 팝업창(모달) */
