--- a/Front/project_Full/src/js/pages/Travel/TravelCalendar.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelCalendar.css
@@ -27,7 +27,7 @@
     margin-Bottom: 1%;
     display: flex;
     justify-Content: center;
-    border: 1px solid;
+    /* border: 1px solid; */
     font-family: 'Gaegu', sans-serif;
     font-size: 20px;
     font-weight: bold;
