--- a/Front/project_Full/src/js/pages/Travel/TravelPackList.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelPackList.css
@@ -10,6 +10,7 @@
     font-family: 'Cute Font', sans-serif;
     font-size: 54px;
     color: #333;
+    background-color: rgb(248, 249, 250);
 }
 
 /*헤더 제목 아이콘*/
@@ -51,7 +52,7 @@
     margin-bottom: 3%;
     margin-top: 3%;
     text-align: center;
-    background-color: white;
+    
     /* border: 1px solid; */
     
 }
@@ -89,7 +90,9 @@
 
 .hideHeaders .MuiDataGrid-virtualScroller {
     margin-top: 0 !important;
-    background: linear-gradient(to right,  #2c4285, #415d9c, #8088B2, #C7B0C2);
+    /* background: linear-gradient(to right,  #2c4285, #415d9c, #8088B2, #C7B0C2); */
+    /* background: #afeeee, #87ceeb, #b0e0e6, #b0c4de; */
+    background : linear-gradient(to right, #fbfbfc, #dbfeff);
    
 }
 
