모달창 및 결제성공페이지 수정, 데이터그리드 셀 포커스 테두리 삭제

--- a/Front/project_Full/src/js/pages/Payment/Proceedpayment.css
+++ b/Front/project_Full/src/js/pages/Payment/Proceedpayment.css
@@ -26,6 +26,7 @@
     margin-Bottom: 5%;
     margin-Top: 5%; 
     border: none;
+    background-color: rgb(248, 249, 250);
 }
 
 .inform2{
@@ -36,4 +37,8 @@
     margin-top:-45px;
     margin-left:40px;
     position: absolute;
+}
+
+.payment-button{
+    margin-top: 20px;
 }
