--- a/Front/project_Full/src/js/pages/Travel/TravelPackList.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelPackList.css
@@ -98,8 +98,13 @@
 
 /* 참고: https://stackoverflow.com/questions/76463098/how-to-remove-column-header-of-mui-v5-datagrid-in-react-ts */
 /* ------------------------------------------ */
+/*데이터 그리드 셀을 선택했을 때 테두리 삭제*/
+.MuiDataGrid-cell:focus {
+    outline: none !important;
+}
 
 
+  
 
 /* 이미지 */
 .image-cell {
