--- a/Front/project_Full/src/js/pages/Travel/TravelCalendar.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelCalendar.css
@@ -11,7 +11,7 @@
 .calendar-font{
     font-family: 'Caveat', cursive;
     font-size: 45px;
-    margin-right: 10%;
+    margin-left: 10%;
 }
 /*달력 버튼 스타일*/
 .calendar-button-font{
