--- a/Front/project_Full/src/js/pages/Payment/Tosspayments/Success.css
+++ b/Front/project_Full/src/js/pages/Payment/Tosspayments/Success.css
@@ -6,14 +6,14 @@
     font-size: 54px;
     color: #333;
 }
-
+/*버튼 폰트*/
 .success-button{
     text-align: center;
     font-family: 'Cute Font', sans-serif;
     font-size: 20px;
     justify-content: center;
 }
-
+/*버튼 스타일*/
 .success-button-style{
     margin-left: 210px;
     margin-top: 100px;
@@ -21,7 +21,7 @@
 
 .success-inform{
     text-align: center;
-    font-family: 'Nanum Pen Script', cursive;
+    font-family: 'Cute Font', sans-serif;
     font-size: 30px;
     color: #333;
 }
