--- a/Front/project_Full/src/js/pages/Calendar/TravelCalendar.css
+++ b/Front/project_Full/src/js/pages/Calendar/TravelCalendar.css
@@ -8,7 +8,7 @@
 }
 
 .App{
-    margin: 120px;
+    margin: 0px;
     width:80%;
 }
 
@@ -17,84 +17,78 @@
     margin-top: 35px;
 }
 
-.boxGroup{
+.card{
+    
+    margin: 1%;
+    left:2.5%;
+    width:30%;
+    height: 500px;
+    float:left;
+    overflow: hidden;
+}
+
+.card > img{
+    margin-top: -10px;
+    width:100%;
+    height:100%;
+    object-fit:fill;
+    border: 2px solid black;
+
+
+}
+
+#checkBox{
     position: relative;
-    margin-top: 30px;
-    height: 1000px;
+    width:100%;
+    height: 60px;
     
 }
 
-.img{
-    margin: 10px;
-    float: left;
-    border:1px solid black;
-    width:20%;
-    height: 40%;
-    overflow:hidden;
+#checkBox > .cam{
+    margin-left:0px;
 }
 
-.img1{
-    position: absolute;
-    border:1px solid black;
-    width:20%;
-    height: 40%;
+#checkBox > .cul{
+    margin-left:40px;
 }
 
-.img2{
-    position: absolute;
-    border:1px solid black;
-    margin-left: 25%;
-    width:20%;
-    height: 40%;
+#checkBox > .fes{
+    margin-left:40px;
 }
 
-.img3{
-    position: absolute;
-    border:1px solid black;
-    margin-left: 50%;
-    width:20%;
-    height: 40%;
+#checkBox > .mapshow{
+    margin-left:40px;
 }
 
-.img4{
-    position: absolute;
-    border:1px solid black;
-    margin-top: 450px;
-    width:20%;
-    height: 40%;
-}
-
-.img5{
-    position: absolute;
-    border:1px solid black;
-    margin-left: 25%;
-    margin-top: 450px;
-    width:20%;
-    height: 40%;
-}
-
-.img6{
-    position: absolute;
-    border:1px solid black;
-    margin-left: 50%;
-    margin-top: 450px;
-    width:20%;
-    height: 40%;
-}
-
-.문화{
-    margin-left: 30px;
-}
-
-.공연{
-    margin-left: 30px;
-}
-.캠핑{
-    margin-left: 30px;
+#checkBox > .mapshow > .공연행사{
+    margin-left:0px;
 }
 
 #selectBox{
     float:right;
     font-size: 15px;
     width:100px;
+}
+
+.card > h4{
+    border: 2px solid black;
+    text-align: center;
+}
+
+.calselectBox > .selectInput{
+    position: absolute;
+  box-sizing: border-box;
+  font-style: normal;
+border-radius: 5px;
+padding: 0px 20px;
+line-height: 12px;
+    margin-left: 75%;
+    margin-top:15px;
+}
+
+.calselectBox > p{
+    position: absolute;
+    width:100px;
+    top: 15px;
+    right:120px;
 }
