--- a/Front/project_Full/src/js/pages/Travel/TravelPackList.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelPackList.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cute+Font&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cute+Font&family=Nanum+Pen+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Cute+Font&family=Gaegu:wght@300&family=Nanum+Pen+Script&family=Orbit&family=Single+Day&display=swap');
 
 
 /*헤더 제목 스타일*/
@@ -7,7 +6,7 @@
     margin-top: 3%;
     margin-bottom: 3%;
     text-align: center;
-    font-family: 'Cute Font', sans-serif;
+    font-family: 'Single Day', cursive;
     font-size: 54px;
     color: #333;
     background-color: rgb(248, 249, 250);
