--- a/Front/project_Full/src/js/pages/Travel/TravelReservation.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelReservation.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Cute+Font&family=Gaegu:wght@300&family=Nanum+Pen+Script&family=Orbit&family=Single+Day&display=swap');
 
 
 /*데이터그리드 스타일*/
@@ -14,7 +14,7 @@
 }
 /*헤더 제목 스타일*/
 .traval-reservation-header {
-    font-family: 'Cute Font', sans-serif;
+    font-family: 'Single Day', cursive;
     font-size: 54px;
     color: #333;
 }
