--- a/Front/project_Full/src/js/component/Pagination/PaginationComponent.css
+++ b/Front/project_Full/src/js/component/Pagination/PaginationComponent.css
@@ -5,9 +5,8 @@
     align-items: center;
     
 }
-/*버튼 색깔*/
-.MuiPagination-root {
-    button{
-        background-color : #dbfeff !important;
-    }
+
+/*버튼 호버 색깔*/
+.MuiPagination-root button:hover {
+    background-color: #dbfeff;
 }
