--- a/Front/project_Full/src/js/pages/Payment/Proceedpayment.css
+++ b/Front/project_Full/src/js/pages/Payment/Proceedpayment.css
@@ -5,6 +5,7 @@
     margin-top: 3%;
     text-align: center;
     font-family: 'Cute Font', sans-serif;
+    justify-content: center;
     font-size: 20px;
     color: #333;
 }
@@ -21,10 +22,10 @@
 .card{
     font-family: 'Cute Font', sans-serif;
     font-size: 27px;
-    margin-Left: 20%;
-    margin-Right: 20%;
     margin-Bottom: 5%;
     margin-Top: 5%; 
+    justify-content: center;
+    align-items: center;
     border: none;
     background-color: rgb(248, 249, 250);
 }
@@ -40,9 +41,18 @@
 }
 
 .payment-button{
-    margin-top: 20px;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
 
 .cardnumber{
-    width: 210px;
+    width: 200px;
+    margin-right: 30%;
+    margin-top: 4%;
 }
+
+.cardform{
+    width: 160px;
+    margin-left: 43%;
+}
+
