--- a/Front/project_Full/src/js/layout/sidebar/Sidebar.css
+++ b/Front/project_Full/src/js/layout/sidebar/Sidebar.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  display: flex;
 }
 
 .profile-image {
@@ -26,7 +27,7 @@
 /* 링크를 위한 버튼 스타일링 */
 .link {
   display: block;
-  width: 100%;
+  width: 7%;
   padding: 10px;
   background-color: transparent; /* 수정: 배경색 제거 */
   color: #2c0be9;
@@ -36,6 +37,8 @@
   border-radius: 4px;
   margin-bottom: 5px; /* 버튼 사이에 간격 추가 */
   transition: background-color 0.3s;
+  white-space: nowrap; /*줄바꿈 방지*/
+  margin-right: 10px;
 }
 
 /* 버튼 호버 효과 */
@@ -55,4 +58,9 @@
   text-shadow: none; /* 수정: 텍스트 그림자 제거 */
   transform: translateY(0%) translateZ(0) scale(1.1);
   font-weight: 600;
+}
+
+.link-container{
+  display: flex;
+  flex-direction: column;
 }
