--- a/Front/project_Full/src/js/pages/UserManage/UserList/UserList.css
+++ b/Front/project_Full/src/js/pages/UserManage/UserList/UserList.css
@@ -14,8 +14,8 @@
 /* ========== ========== ========== ========== ========== */
 /* ========== ========== ========== ========== ========== */
 
-.btn-black {
-  background: black;
+.btn-gray {
+  background: gray;
   color: white; /* 텍스트 색상을 백그라운드와 대비되도록 흰색으로 설정 */
   padding: 5px 10px;
   margin: 0 5px;
