--- a/Front/project_Full/src/js/layout/sidebar/Sidecare.css
+++ b/Front/project_Full/src/js/layout/sidebar/Sidecare.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Cute+Font&family=Gaegu:wght@300&family=Nanum+Pen+Script&family=Orbit&family=Single+Day&display=swap');
 /* Sidecare.css */
 
 /* 측면 바 스타일링 */
@@ -37,7 +38,7 @@
   display: block;
   /* 수정된 내용 시작 */
   width: 100%; /* 수정: 버튼 전체 폭 사용 */
-  margin-bottom: 5px;
+  margin-bottom: 3px;
   /* 수정된 내용 끝 */
   padding: 10px;
   background-color: transparent; /* 수정: 배경색 제거 */
@@ -48,6 +49,8 @@
   border-radius: 4px;
   transition: background-color 0.3s;
   white-space: nowrap; /*줄바꿈 방지*/
+  font-family: 'Cute Font', sans-serif;
+  font-size: 20px;
 }
 
 /* 버튼 호버 효과 */
@@ -73,4 +76,9 @@
 .link-container{
   display: flex;
   flex-direction: column;
+}
+
+.side-title{
+  font-family: 'Single Day', cursive;
+  font-size: 32px;
 }
