--- a/Front/project_Full/src/js/pages/Travel/TravelReservation.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelReservation.css
@@ -28,10 +28,10 @@
     margin-left: 20%;
     margin-Bottom: 1%;
     background-color: rgb(248, 249, 250);
-    border: 1px solid rgb(248, 249, 250);
     text-Align: center;
     align-items: center;
-
+    border: 1px solid #a0a0a0; 
+    border-radius: 20px;
 }
 
 .box {
