--- a/Front/project_Full/src/js/layout/header/Header.css
+++ b/Front/project_Full/src/js/layout/header/Header.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Cute+Font&family=Gaegu:wght@300&family=Nanum+Pen+Script&family=Orbit&family=Single+Day&display=swap');
 .header {
   display: flex;
   flex-direction: column;
   justify-content: space-between; /* 양 끝으로 정렬 */
   align-items: center;
+  
 }
 
 .top-memu {
@@ -25,3 +27,7 @@
   justify-content: center;
 }
 
+.nav{
+  font-family: 'Cute Font', sans-serif;
+  font-size: 24px;
+}
