--- a/Front/project_Full/src/js/pages/MainPage/MainPage.css
+++ b/Front/project_Full/src/js/pages/MainPage/MainPage.css
@@ -1,16 +1,17 @@
 .MypageMain{
     margin-top:130px;
     width:80%;
-    height: 700px;
+    height: 900px;
 }
 
 .MypageFirst{
+    margin-top: -50px;
     position: relative;
     top: 10px;
 }
 
 .cardHeader{
-    border: 1px solid black;
+
     text-align: center;
     border-radius: 20%;
 }
@@ -21,20 +22,28 @@
     margin-left: 10%;
     width: 25%;
     border: 1px solid rgb(248,249,250);
-    height: 400px;
+    height: 350px;
+    border-radius: 20%;
     
   }
 
 .cardBody{
+    margin-left: 5%;
+    margin-top: 5%;
+    width:90%;
+    height: 80%;
     text-align: center;
-    
-
+    border: 1px solid rgb(248,249,250);
+    background-color: rgb(248,249,250);
+    border-radius: 20%;
 }
 
 .cardBody > div{
+    margin-left: 5%;
+    width:90%;
     margin-top:20px;
     text-align: center;
-    
+
 
 }
 
@@ -45,9 +54,20 @@
     margin-left: 40%;
     width: 20%;
     border: 1px solid rgb(248,249,250);
-    height: 400px;
+    height: 350px;
+    border-radius: 20%;
    
 
+}
+
+.mycol2 > .weather{
+    border-radius: 20%;
+    margin-top: 5%;
+    margin-left: 5%;
+    width:90%;
+    height:80%;
+    border: 1px solid rgb(248,249,250);
+    background-color: rgb(248,249,250);
 }
 
 .mycol3{
@@ -56,8 +76,9 @@
     width: 25%;
     margin-left: 50%;
     border: 1px solid rgb(248,249,250);
-    height: 400px;
+    height: 350px;
     margin-top:10px;
+    border-radius: 20%;
 
 }
 
@@ -89,7 +110,9 @@
 }
 
 .MypageThird{
-    width:110%;
-    margin-left:-5%;
-    margin-top:300px;
+    width:100%;
+    margin-left:0%;
+    margin-top:400px;
+    
+
 }
