--- a/Front/project_Full/src/js/pages/ConnectionLog/ConnectionLog.css
+++ b/Front/project_Full/src/js/pages/ConnectionLog/ConnectionLog.css
@@ -1,5 +1,7 @@
 /* ConnectionLog.css */
 
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Cute+Font&family=Gaegu:wght@300&family=Nanum+Pen+Script&family=Orbit&family=Single+Day&display=swap');
+
 .table-container {
     margin: 200px auto; /* 수평 가운데 정렬을 위한 margin 속성 추가 */
     text-align: center; /* 텍스트 가운데 정렬 */
@@ -24,4 +26,9 @@
   
   th {
     background-color: #f2f2f2; /* 헤더 배경색 지정 */
+  }
+
+  .current-see{
+    font-family: 'Single Day', cursive;
+    font-size: 45px;
   }
