--- a/Front/project_Full/src/js/pages/Travel/TravelPackList.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelPackList.css
@@ -10,7 +10,7 @@
     font-size: 54px;
     color: #333;
     /* background-color: rgb(248, 249, 250); */
-    
+
 }
 
 /*헤더 제목 아이콘*/
@@ -31,7 +31,7 @@
 .button-font {
     font-family: 'Cute Font', sans-serif;
     font-size: 24px;
-    
+
 }
 
 
@@ -45,9 +45,9 @@
     margin-bottom: 3%;
     margin-top: 3%;
     text-align: center;
-    
+
     /* border: 1px solid; */
-    
+
 }
 
 /* <여행 정보> */
@@ -78,17 +78,17 @@
 .hideHeaders .MuiDataGrid-columnHeaders,
 .hideHeaders .MuiDataGrid-columnHeader {
     display: none;
-    
+
 }
 
 .hideHeaders .MuiDataGrid-virtualScroller {
     margin-top: 0 !important;
     /* background: linear-gradient(to right,  #2c4285, #415d9c, #8088B2, #C7B0C2); */
     /* background: #afeeee, #87ceeb, #b0e0e6, #b0c4de; */
-    background : linear-gradient(to right, #fbfbfc, #dbfeff);
-    border: 3px solid #a0a0a0; 
+    background: linear-gradient(to right, #fbfbfc, #dbfeff);
+    border: 3px solid #a0a0a0;
     border-radius: 8px;
-    
+
 }
 
 /* 참고: https://stackoverflow.com/questions/76463098/how-to-remove-column-header-of-mui-v5-datagrid-in-react-ts */
@@ -99,7 +99,7 @@
 }
 
 
-  
+
 
 /* 이미지 */
 .image-cell {
@@ -124,4 +124,16 @@
     /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
     /* z-index: 1000; */
     /* 다른 요소 위에 표시되도록 설정 */
+}
+
+
+/* 체크박스 스타일 */
+.checkbox-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.checkbox-container label {
+    margin-right: 20px;
+    /* 각 라벨 사이의 간격 조절 */
 }
