--- a/Front/project_Full/src/js/pages/ReservationInfo/ReservationInfo.css
+++ b/Front/project_Full/src/js/pages/ReservationInfo/ReservationInfo.css
@@ -75,3 +75,8 @@ table td {
   font-family: 'Single Day', cursive;
   font-size: 32px;
 }
+
+.stdate-style{
+  font-family: 'Cute Font', sans-serif;
+  font-size: 25px;
+}
