--- a/Front/project_Full/src/js/pages/MemberInfo/MemberInfo.css
+++ b/Front/project_Full/src/js/pages/MemberInfo/MemberInfo.css
@@ -1,4 +1,5 @@
-  
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Cute+Font&family=Gaegu:wght@300&family=Nanum+Pen+Script&family=Orbit&family=Single+Day&display=swap');
+
   .container {
     width: 400px;
     padding: 20px;
@@ -10,6 +11,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
   }
   
   .header {
@@ -46,3 +48,27 @@
     border-radius: 50%; /* 선택 사항: 이미지를 동그랗게 만들기 위한 둥근 경계 */
     margin-bottom: 10px; /* 선택 사항: 이미지 아래에 여백 추가 */
 }
+
+  .email-button{
+    font-size: 12px;
+    margin-bottom: 15px;
+  }
+
+  .email-check{
+    font-size: 12px;
+    margin-bottom: 14px;
+  }
+
+  .check-code{
+    margin-top: 10px;
+    
+  }
+
+  .user-page{
+    font-family: 'Single Day', cursive;
+  }
+
+  .user-page-form{
+    font-family: 'Cute Font', sans-serif;
+    font-size: 23px;
+  }
