--- a/Front/project_Full/src/js/pages/Travel/TravelCalendar.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelCalendar.css
@@ -42,7 +42,7 @@
 
 /*축제에 대한 색상*/
 .festival-inform-color {
-    background : linear-gradient(to right, #d2d2ff,  #e9fffc);
+    background : linear-gradient(to right, #cacaff,  #e9fffc);
 }
 
 /*숙소에 대한 색상*/
