--- a/Front/project_Full/src/js/pages/MemberInfo/MemberInfo.css
+++ b/Front/project_Full/src/js/pages/MemberInfo/MemberInfo.css
@@ -1,48 +1,79 @@
-  
-  .container {
-    width: 400px;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: 0 auto; /*가운데 정렬을 위한 margin 속성 추가 */
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Cute+Font&family=Gaegu:wght@300&family=Nanum+Pen+Script&family=Orbit&family=Single+Day&display=swap');
+
+.container {
+  width: 400px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+  /*가운데 정렬을 위한 margin 속성 추가 */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  }
-  
-  .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    text-align: left;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 8px;
-  }
-  
-  input,
-  textarea {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 16px;
-  }
-  
-  button {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  .profile-image {
-    width: 50px; /* 필요한 크기에 맞게 조절 */
-    height: 50px; /* 필요한 크기에 맞게 조절 */
-    border-radius: 50%; /* 선택 사항: 이미지를 동그랗게 만들기 위한 둥근 경계 */
-    margin-bottom: 10px; /* 선택 사항: 이미지 아래에 여백 추가 */
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 16px;
+}
+
+button {
+  background-color: #4caf50;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.profile-image {
+  width: 50px;
+  /* 필요한 크기에 맞게 조절 */
+  height: 50px;
+  /* 필요한 크기에 맞게 조절 */
+  border-radius: 50%;
+  /* 선택 사항: 이미지를 동그랗게 만들기 위한 둥근 경계 */
+  margin-bottom: 10px;
+  /* 선택 사항: 이미지 아래에 여백 추가 */
+}
+
+.email-button {
+  font-size: 12px;
+  margin-bottom: 15px;
+}
+
+.email-check {
+  font-size: 12px;
+  margin-bottom: 14px;
+}
+
+.check-code {
+  margin-top: 10px;
+
+}
+
+.user-page {
+  font-family: 'Single Day', cursive;
+}
+
+.user-page-form {
+  font-family: 'Cute Font', sans-serif;
+  font-size: 23px;
 }
