패키지 추가 UI/ 페스티벌 DB 연동

--- a/Front/project_Full/src/js/pages/Travel/TravelPackAdd/TravalPackAdd.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelPackAdd/TravalPackAdd.css
@@ -1,5 +1,10 @@
-.ImgBox {
-  border: 1px solid black;
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Cute+Font&family=Gaegu:wght@300&family=Nanum+Pen+Script&family=Orbit&family=Single+Day&display=swap');
+
+.TravalPackAdd{
+  margin-top: 30px;
+  text-align: center;
+  font-family: 'Cute Font',sans-serif;
+  font-size: 20px;
 }
 
 .map {
@@ -8,4 +13,8 @@
 
 .select-form {
   margin-bottom: 20px;
+}
+
+.roomSearch{
+   background-color: blue;
 }
