--- a/Front/project_Full/src/js/pages/Travel/TravelReservation.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelReservation.css
@@ -97,3 +97,12 @@
     /* .modal-content 모달의 클래스 종류로 이 클래스를 이용하면 원하는 부위에 원하는 색깔을 넣을수 있다. */
     background-color: #f0f0f0; /* 원하는 배경색으로 변경 */
   }
+
+.map-style{
+    height: 515px;
+    margin-Right: 20%;
+    margin-Left: 20%;
+    margin-Bottom: 1%;
+    /* background-Color: white; */
+    /* border: 1px solid; */
+}
