--- a/Front/project_Full/src/js/pages/home/Home.css
+++ b/Front/project_Full/src/js/pages/home/Home.css
@@ -1,39 +1,37 @@
-.col-md-6{
-    margin-top:30px;
-    width:60%;
+.col-md-6 {
+  margin-top: 30px;
+  width: 60%;
+}
+.col-md-7 {
+  margin-left: 40%;
+  margin-top: 30px;
+  width: 60%;
+}
+.imgGroup img {
+  width: 33.3%;
+  height: 400px;
+  background-size: contain;
+  float: left;
+}
+.containerMain {
+  width: 100%;
+  height: 450px;
+}
+.mainImg {
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+}
+.mainbtn {
+  margin-left: 40%;
+  width: 20%;
+  background-color: black;
+}
+.mainfont {
+  margin-left: 25%;
+  width: 100%;
 }
 
-.col-md-7{
-    margin-left:40%;
-    margin-top:30px;
-    width:60%;
-}
-
-
-
-.imgGroup img{
-    width:33.3%;
-    height:400px;
-    background-size: contain;
-    float: left;
-}
-
-.containerMain{
-    width:100%;
-    height: 450px;
-}
-
-.mainImg{
-    width:100%;
-    height:100%;
-    background-size: contain;
-}
-
-.mainbtn{
-    margin-left:40%;
-    width: 20%;    background-color: black;
-}
-
-.mainfont{
-    margin-left:50%;
+.container-xl {
+  margin-top: 20px;
 }
