위치 오류가 난 부분이 있어 다시 수정

--- a/Front/project_Full/src/js/pages/Travel/TravelPackList/TravelPackList.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelPackList/TravelPackList.css
@@ -157,3 +157,16 @@
     margin-right: 15px;
 }
 
+.search-container{
+    width: 500px;
+    margin-left: 10%;
+}
+
+.search-button{
+    height: 45px;
+}
+
+.search-btn-title{
+    font-size: 20px;
+    font-family: 'Cute Font', sans-serif;
+}
