--- a/Front/project_Full/src/js/pages/ReservationInfo/ReservationInfo.css
+++ b/Front/project_Full/src/js/pages/ReservationInfo/ReservationInfo.css
@@ -77,7 +77,7 @@ table td {
 }
 
 #endDate {
-  margin-bottom: 80px;
+  margin-bottom: 50px;
 }
 
 .reserve-information {
@@ -88,4 +88,11 @@ table td {
 .stdate-style {
   font-family: 'Cute Font', sans-serif;
   font-size: 25px;
+}
+
+.reserve-table{
+  margin-left: 10%;
+  font-family: 'Cute Font', sans-serif;
+  font-size: 23px;
+  text-align: center;
 }
